src/test/resources/tests/compile-fail/typeck/invalid-prefix.rs
fn main() {
    let a = 'a';
    let b = !a;  //! ERROR(3:14): unary operation `!` cannot be applied to char
}